--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
             
         		 <div class="sidebar-hover white big">
                     <h3> <p class="pagination">
-                       <span class="page">01</span> - <span class="total-pages">08</span>
+                       <span class="page">01</span> / <span class="total-pages">08</span>
                      </p></h3>
                   </div>
 			
