--- a/calicalabozo.html
+++ b/calicalabozo.html
@@ -125,7 +125,7 @@
 			</section>
             
             <div class="divider">
-				<img class="hed" src="imgs/bg-cc.jpg">
+				<img class="hed" src="imgs/bg-cc.png">
 			</div>
             
 		
@@ -146,11 +146,11 @@
 					<p class="category foo">01. User Experience</p>
 					<p class="description-begin foo">We wanted to created an interactive website that promotes and represents the cultural identity/aspects from the city that the writer Andrés Caicedo has inside his books and short stories.</p>
                     <br>
-                    <hr>
+                    <hr class="foo">
                     <br>
 					<p class="description-begin foo">Research...</p>
                     <br>
-                    <hr>
+                    <hr class="foo">
                     <br>
 					<p class="description-begin foo">Style...</p>
 				</div>
