--- a/index.html
+++ b/index.html
@@ -50,16 +50,17 @@
 
 <body class="hidden animate-in">
 	 
-	 <!--<div class="preloader-wrap">
+	 <div class="preloader-wrap">
   		<div class="percentage" id="precent"></div>
   		<div class="loader">
   		  <div class="trackbar">
-  		    <div class="loadbar"></div>
-  		 <h2 class="section-heading white">Juan Castro</h2>
-   			  
+  		    <div class="loadbar">
+			  	<h2 class="text-list white">Juan Castro</h2>
+				<p class="additional-text">Interactive Designer</p>
+			  </div>
   		  </div>
    		</div>
-	 </div>-->
+	 </div>
 	
  
  <div id="follower" class="whitemouse"></div>
