--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 	 <div class="preloader-wrap">
   		<div class="percentage" id="precent"></div>
 		 
-		 <div class="box-list">
+		 <!--<div class="box-list">
 		  	<ul id="scroller">
       			<li>
  		   			<h2 class="text-list big">Juan Castro</h2>
@@ -64,7 +64,7 @@
 		  	<p class="additional-text up">Interactive Designer</p>
 			<p class="additional-text down">SEE PROJECT</p>
 		  </div>
-		 
+		 -->
   		<div class="loader">
   		  <div class="trackbar">
 			  
