--- a/all.html
+++ b/all.html
@@ -91,6 +91,9 @@
           <div class="container">
           
           <div class="item">
+              <div class="titulo">
+                Calicalabozo
+              </div>
               <img src="imgs/andres.png">
           </div>
               
