--- a/calicalabozo.html
+++ b/calicalabozo.html
@@ -403,7 +403,7 @@
 				viewFactor: 0.02
 		  });
 	</script>
-         <script>
+         <!--<script>
 			 
 			 // Hide Header on on scroll down
 			 var didScroll;
@@ -444,7 +444,7 @@
 				lastScrollTop = st;
 			}
 			 
-		</script>
+		</script>-->
 
 	<script>
 		window.addEventListener("beforeunload", function () {
