--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 			    </li>  
 				<li>
 					<a href="calicalabozo.html" style="text-decoration:none; color:#000000">
-		   				<h2 class="text-list big">Tool of NA</h2>
+		   				<h2 class="text-list big">Corvette</h2>
 			  		</a>
 			    </li>  
 		  	</ul>
@@ -274,8 +274,9 @@
         	<!--<div class="box">
         		<h2 class="section-heading">N.O.L.A 300</h2>
 		  	</div>-->
+		  
  		  <div class="texts">
-		  	<p class="additional-text up">Website</p>
+		  	<p class="additional-text up">Concept</p>
 			<p class="additional-text down">SEE PROJECT</p>
 		  </div>
       </div>
