--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 			  		</a>
 			    </li>  
 				<li>
-					<a href="calicalabozo.html" style="text-decoration:none; color:#000000">
+					<a href="corvette.html" style="text-decoration:none; color:#000000">
 		   				<h2 class="text-list big">Corvette</h2>
 			  		</a>
 			    </li>  
