--- a/calicalabozo.html
+++ b/calicalabozo.html
@@ -353,7 +353,7 @@
 					<p class="next-case">Next</p>
                     <a href="mil.html" style="text-decoration:none; color:#000000">
 
-                    <h2 class="next-title big">Super Bowl Ad</h2>
+                    <h2 class="next-title big">Latin Cuisine</h2>
 					</a>
 					<p class="next-case">Website</p>
 				</div>
