--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 			  		</a>
 			    </li>
 			    <li>
-					<a href="calicalabozo.html" style="text-decoration:none; color:#000000">
+					<a href="nola.html" style="text-decoration:none; color:#000000">
 		   				<h2 class="text-list big">NOLA 300</h2>
 			  		</a>
 			    </li>  
