--- a/mil.html
+++ b/mil.html
@@ -199,7 +199,7 @@
                <div class="container">
 					
 					<p class="next-case">Next</p>
-                    <a href="mil.html" style="text-decoration:none; color:#000000">
+                    <a href="tostitos.html" style="text-decoration:none; color:#000000">
 
                     <h2 class="next-title">Super Bowl Ad</h2>
                    
