--- a/calicalabozo.html
+++ b/calicalabozo.html
@@ -355,7 +355,7 @@
 
                     <h2 class="next-title big">Latin Cuisine</h2>
 					</a>
-					<p class="next-case">Website</p>
+					<p class="next-case">Branding</p>
 				</div>
 				
 			</section>
