--- a/tostitos.html
+++ b/tostitos.html
@@ -207,7 +207,7 @@
 
                     <h2 class="next-title big">NOLA 300</h2>
 					</a>                   
-					<p class="next-case">Website</p>
+					<p class="next-case">Installation</p>
 				</div>
 				
 			</section>
