--- a/calicalabozo.html
+++ b/calicalabozo.html
@@ -61,7 +61,10 @@
 				<div class="logo">
 					<img src="imgs/logo.png">
 				</div>
-			
+		
+				<div class="logo black">	
+						<h3>Juan Castro</h3>
+				</div>
 			
 				<div class="menu big">
 					<a href="index.html" style="text-decoration:none;color:rgb(13,13,13)"><h3>go back</h3></a>
