--- a/index.html
+++ b/index.html
@@ -49,15 +49,15 @@
 </head>
 
 <body class="hidden animate-in">
-	<!-- 
+	 
 	 <div class="preloader-wrap">
-  		<div class="percentage" id="precent"></div>
+<!--  		<div class="percentage" id="precent"></div>-->
   		<div class="loader">
   		  <div class="trackbar">
   		    <div class="loadbar"></div>
   		  </div>
    		</div>
-	 </div>-->
+	 </div>
 	
  
  <div id="follower" class="whitemouse"></div>
