--- a/tostitos.html
+++ b/tostitos.html
@@ -28,6 +28,16 @@
 	
 <body class="hidden animate-in">
 <!--	  		 <div id="follower"></div>-->
+	
+	 <div class="preloader-wrap">
+<!--  		<div class="percentage" id="precent"></div>-->
+  		<div class="loader">
+  		  <div class="trackbar">
+  		    <div class="loadbar"></div>
+  		  </div>
+   		</div>
+	 </div>
+	
  
 <div id="pointer"></div>
  <div id="follower"></div>
@@ -226,6 +236,7 @@
   		<script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js'></script>
 		
 		<script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
+		<script  src="js/loader.js"></script>
 
     	<script  src="js/mouse.js"></script>
 <script>
