--- a/about.html
+++ b/about.html
@@ -70,8 +70,9 @@
 		<div class="case">
   <div class="photo"></div>
 			<div class="about-title">
-					<h2 class="about-title hed">Don’t worry,<br> I’m sitting down so I’m being humble.
-					</h2>
+					<!--<h2 class="about-title hed">Don’t worry,<br> I’m sitting down so I’m being humble.
+					</h2>-->
+					<img class="svg" width="18%" src="imgs/circulo.svg">
 			</div>
 			
 			<div class="container-about">
@@ -274,11 +275,11 @@
 					</div>-->
 
 				</div>
-				<div class="textcont margenD foo">
+				<!--<div class="textcont margenD foo">
 
 					<img class="svg" width="18%" src="imgs/circulo.svg">
 				
-				</div>
+				</div>-->
 				<div class="margen"></div> 
 					
 				</div>
