--- a/tostitos.html
+++ b/tostitos.html
@@ -112,7 +112,7 @@
 			</section>
             
             <div class="divider">
-				<img class="hed" src="imgs/bg-tostitos.png">
+				<img class="hed" src="imgs/tostitos-cover.png">
 			</div>
             
 		
