--- a/about.html
+++ b/about.html
@@ -70,10 +70,10 @@
 		<div class="case">
   <div class="photo"></div>
 			<div class="about-title">
-					<!--<h2 class="about-title hed">Don’t worry,<br> I’m sitting down so I’m being humble.
-					</h2>-->
-					<img class="svg" width="18%" src="imgs/circulo.svg">
+				<img class="svg" width="18%" src="imgs/circulo.svg">
 			</div>
+			
+					<h2 class="about-title vertical-text hed">about</h2>
 			
 			<div class="container-about">
 
