--- a/about.html
+++ b/about.html
@@ -104,7 +104,7 @@
                     <br>
                     <br>
                     <p class="description-begin hed">
-				These are just fun facts: I love bad movies and pirates, I'm really bad with cables and I would love to have a vynil collection.
+				These are just fun facts: I love bad movies, pirates and pizza. Don't know how to take care of cables and
 					</p>
 				</div>
 				
