--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 			  </a>
 		  </div>-->
  		  <div class="texts">
-		  	<p class="additional-text up">/ Website</p>
+		  	<p class="additional-text up">Website</p>
 			<p class="additional-text down">See Project</p>
 		  </div>
       </div>
@@ -183,7 +183,7 @@
 			  </a>
 		  </div>-->
  		  <div class="texts">
-		  	<p class="additional-text up">/ Branding</p>
+		  	<p class="additional-text up">Branding</p>
 			<p class="additional-text down">See Project</p>
 		  </div>
 		  
@@ -210,7 +210,7 @@
         	<h2 class="section-heading">Mil810</h2>
 		  </div>-->
  		  <div class="texts">
-		  	<p class="additional-text up">/ Website</p>
+		  	<p class="additional-text up">Website</p>
 			<p class="additional-text down">See Project</p>
 		  </div>      
 		</div>
@@ -236,7 +236,7 @@
         		<h2 class="section-heading">N.O.L.A 300</h2>
 		  	</div>-->
  		  <div class="texts">
-		  	<p class="additional-text up">/ Installation</p>
+		  	<p class="additional-text up">Installation</p>
 			<p class="additional-text down">See Project</p>
 		  </div>
       </div>
@@ -263,7 +263,7 @@
 		  	</div>-->
 		  
  		  <div class="texts">
-		  	<p class="additional-text up">/ Concept</p>
+		  	<p class="additional-text up">Concept</p>
 			<p class="additional-text down">See Project</p>
 		  </div>
       </div>
