--- a/about.html
+++ b/about.html
@@ -55,7 +55,10 @@
  <div id="follower" class="whitemouse"></div>
 		<nav>
 				<div class="logo">
-					<img src="imgs/logo-white.png">
+					
+					<a href="index.html" class="white" style="text-decoration:none;">
+						<img src="imgs/logo-white.png">
+					</a>
 				</div>
 				
 				<div class="menu big">
