--- a/calicalabozo.html
+++ b/calicalabozo.html
@@ -66,11 +66,11 @@
 	<header>
 		<nav>
 				<div class="logo">
+				<a href="index.html" style="text-decoration:none;">
 					<img src="imgs/logo.png">
+				</a>
 				</div>
-		
 				 
-			
 				<div class="menu big">
 					<a href="index.html" style="text-decoration:none;color:rgb(13,13,13)"><h3>go back</h3></a>
 				</div>
