--- a/tostitos.html
+++ b/tostitos.html
@@ -16,10 +16,31 @@
 	<meta name="msapplication-TileColor" content="#000000">
 	<meta name="theme-color" content="#f1f1f1">
 	
-	
-	<script src="js/barba.min.js" type="text/javascript"></script>
-	
-	<meta name="description" content="Juan Castro is an Interactive Designer focused on Art Direction, Motion Graphics and User Experience.">
+	      
+<!-- Search Engine -->
+<meta name="description" content="Juan Castro is an Interactive Designer focused on Art Direction, Web Design, Motion Graphics and User Experience." />
+<meta name="image" content="https://juanccastro.github.io/fwa/imgs/cover-meta.png" />
+<!-- Schema.org for Google -->
+<meta itemprop="name" content="Juan Castro - Interactive Designer" />
+<meta itemprop="description" content="Juan Castro is an Interactive Designer focused on Art Direction, Web Design, Motion Graphics and User Experience." />
+<meta itemprop="image" content="https://juanccastro.github.io/fwa/imgs/cover-meta.png" />
+<!-- Twitter -->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="Juan Castro - Interactive Designer" />
+<meta name="twitter:description" content="Juan Castro is an Interactive Designer focused on Art Direction, Web Design, Motion Graphics and User Experience." />
+<meta name="twitter:site" content="@unmochilero" />
+<meta name="twitter:creator" content="@unmochilero" />
+<meta name="twitter:image:src" content="https://juanccastro.github.io/fwa/imgs/cover-meta.png" />
+<!-- Open Graph general (Facebook, Pinterest & Google+) -->
+<meta name="og:title" content="Juan Castro - Interactive Designer" />
+<meta name="og:description" content="Juan Castro is an Interactive Designer focused on Art Direction, Web Design, Motion Graphics and User Experience." />
+<meta name="og:image" content="https://juanccastro.github.io/fwa/imgs/cover-meta.png" />
+<meta name="og:image:width" content="1200" />
+<meta name="og:image:height" content="600" />
+<meta name="og:url" content="https://juanccastro.github.io/fwa/" />
+<meta name="og:site_name" content="Juan Castro - Interactive Designer" />
+<meta name="og:type" content="website" />
+      
 
 </head>
 
@@ -44,7 +65,9 @@
 	<header>
 		<nav>
 				<div class="logo">
-					<img src="imgs/logo.png">
+					<a href="index.html" style="text-decoration:none;">
+						<img src="imgs/logo.png">
+					</a>				
 				</div>
 			
 			
