--- a/corvette.html
+++ b/corvette.html
@@ -67,7 +67,9 @@
 	<header>
 		<nav>
 				<div class="logo">
-					<img src="imgs/logo.png">
+					<a href="index.html" style="text-decoration:none;">
+						<img src="imgs/logo.png">
+					</a>
 				</div>
 			
 			
