--- a/all.html
+++ b/all.html
@@ -121,14 +121,14 @@
               		<div class="titulo">
 						Nola 300
 					</div>
-					<img src="imgs/andres.png">
+					<img src="imgs/bg-project-4.png">
 				</div>
               
           		<div class="item">
 					  <div class="titulo">
           		      Corvette
           		    </div>
-          		    <img src="imgs/bg-project-3.png">
+          		    <img src="imgs/corvette.png">
           		</div>
 				  
 			  </div>
