--- a/corvette.html
+++ b/corvette.html
@@ -172,7 +172,7 @@
 				</div>
 				
 				<div class="media">
-					<img class="foo" src="imgs/corvette_v2.png" >
+					<img class="foo" src="imgs/corvet.png" >
 				</div>
 				
 				<div class="media">
