--- a/index.html
+++ b/index.html
@@ -102,27 +102,27 @@
       
 	  	<div class="box-list">
 		  	<ul id="scroller">
-      			<li>
+      			<li data-page="1" class="tit tit-1 li-active">
 					<a href="calicalabozo.html" style="text-decoration:none; color:#000000">
 		   				<h2 class="text-list big">Calicalabozo</h2>
 					</a>
 			    </li>
-			    <li>
+			    <li data-page="2" class="tit tit-2">
 					<a href="mil.html" style="text-decoration:none; color:#000000">
 		   				<h2 class="text-list big">Latin Cuisine</h2>
 			  		</a>
 			    </li>
-			    <li>
+			    <li data-page="3" class="tit tit-3">
 					<a href="tostitos.html" style="text-decoration:none; color:#000000">
 		   				<h2 class="text-list big">Super Bowl Ad</h2>
 			  		</a>
 			    </li>
-			    <li>
+			    <li data-page="4" class="tit tit-4">
 					<a href="nola.html" style="text-decoration:none; color:#000000">
 		   				<h2 class="text-list big">NOLA 300</h2>
 			  		</a>
 			    </li>  
-				<li>
+				<li data-page="5" class="tit tit-5">
 					<a href="corvette.html" style="text-decoration:none; color:#000000">
 		   				<h2 class="text-list big">Corvette</h2>
 			  		</a>
