--- a/about.html
+++ b/about.html
@@ -100,14 +100,14 @@
                     <br>
                     <br>
                     <p class="description-begin hed">
-				I’m a freelance Interactive Designer based in Colombia.	 
+				I’m a freelance Interactive & Motion Designer based in Colombia.	 
 				I’m passionate about art direction, motion graphics, web design, user experiences and generally making cool stuff. 
 					</p>
                     <br>
                     <br>
                     <br>
                     <p class="description-begin hed">
-				These are just fun facts: I love bad movies, pirates and pizza. Don't know how to take care of cables and
+				These are just fun facts: Love bad movies, Van Gogh, vynils, pirates and pizza. Don't know how to take care of cables or plants.
 					</p>
 				</div>
 				
