--- a/about.html
+++ b/about.html
@@ -100,9 +100,7 @@
                     <br>
                     <br>
                     <p class="description-begin hed">
-				I’m a freelance Interactive & Motion Designer based in Colombia.
-						<br>
-				I’m passionate about art direction, motion graphics, web design, user experiences and generally making cool stuff.
+				I’m a freelance Interactive & Motion Designer based in Colombia. I’m passionate about art direction, motion graphics, web design, user experiences and generally making cool stuff.
 					</p>
                     <br>
                     <br>
