--- a/about.html
+++ b/about.html
@@ -53,6 +53,8 @@
 <!--	  		 <div id="follower"></div>-->
  
  <div id="follower" class="whitemouse"></div>
+		<div class="noise"></div>
+
 		<nav>
 				<div class="logo">
 					
@@ -283,6 +285,7 @@
 		<script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
  
     	<script  src="js/mouse.js"></script>
+		<script  src="js/noise.js"></script>
 
 	<script>
 		
