--- a/index.html
+++ b/index.html
@@ -324,6 +324,7 @@
 	  
  	<script  src="js/index.js"></script>
     <script  src="js/mouse.js"></script>
+    <script  src="js/noise.js"></script>
 
 	<script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
      
