--- a/calicalabozo.html
+++ b/calicalabozo.html
@@ -377,13 +377,13 @@
   		<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>	  
   		<script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js'></script>
 		
-		<script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
+		<script src="https://unpkg.com/scrollreveal"></script>
 
 		<script  src="js/loader.js"></script>
     	<script  src="js/mouse.js"></script>
           
     
-<script>
+	<script>
 		
 		// Changing the defaults
 			window.sr = ScrollReveal({ reset: false });
