--- a/mil.html
+++ b/mil.html
@@ -241,7 +241,7 @@
 		<script  src="js/loader.js"></script>
 
     	<script  src="js/mouse.js"></script>
-<script>
+<!--<script>
 		
 		// Changing the defaults
 			window.sr = ScrollReveal({ reset: false });
@@ -270,7 +270,7 @@
 				mobile: false, 
 				viewFactor: 0.02
 		  });
-	</script>
+	</script>-->
          
 	<script>
 		window.addEventListener("beforeunload", function () {
