--- a/nola.html
+++ b/nola.html
@@ -238,7 +238,7 @@
 		<script  src="js/loader.js"></script>
 
     	<script  src="js/mouse.js"></script>
-<script>
+<!--<script>
 		
 		// Changing the defaults
 			window.sr = ScrollReveal({ reset: false });
@@ -267,7 +267,7 @@
 				mobile: false, 
 				viewFactor: 0.02
 		  });
-	</script>
+	</script>-->
          
 	<script>
 		window.addEventListener("beforeunload", function () {
