--- a/tostitos.html
+++ b/tostitos.html
@@ -262,7 +262,7 @@
 		<script  src="js/loader.js"></script>
 
     	<script  src="js/mouse.js"></script>
-<script>
+<!--<script>
 		
 		// Changing the defaults
 			window.sr = ScrollReveal({ reset: false });
@@ -291,7 +291,7 @@
 				mobile: false, 
 				viewFactor: 0.02
 		  });
-	</script>
+	</script>-->
          
 	<script>
 		window.addEventListener("beforeunload", function () {
