--- a/index.html
+++ b/index.html
@@ -286,8 +286,8 @@
 	
 	<footer>
          
-                 <div class="foot big white"> 
-                      <a href="all.html" class="white" style="text-decoration:none;"><h3>All Projects</h3></a>
+                 <div class="foot white"> 
+                      <h3 style="opacity:0.5;">Scroll to discover</h3>
 
                   </div>
 		
